--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
+	testImplementation ("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2")
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
