--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
+	implementation 'org.projectlombok:lombok'
+	annotationProcessor('org.projectlombok:lombok')
 	testImplementation ("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2")
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
