--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
 	implementation 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor('org.projectlombok:lombok')
 	testImplementation ("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2")
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
