--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
 	implementation 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 	annotationProcessor('org.projectlombok:lombok')
 	testImplementation ("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2")
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
