--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-//	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
+	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
 	annotationProcessor('org.projectlombok:lombok')
 	testImplementation ("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2")
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
