--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,10 @@ repositories {
 dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'mysql:mysql-connector-java'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.1'
+//	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
@@ -28,7 +30,6 @@ dependencies {
 	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
 	annotationProcessor('org.projectlombok:lombok')
 	testImplementation ("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2")
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
