--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,12 @@ spring:
       username: root
       password: 1234
 
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+
+
 #project.base-dir=file:////Users/ldu/workspace/ReservationOrder
 #spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
 #spring.thymeleaf.cache=false
