has one 관계 한번에 불러오기

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ pagehelper:
 mybatis:
   mapper-locations:
     - com.ldu.reservationOrder.mapper/*.xml
-  type-aliases-package: com.ldu.reservationOrder.dto
+  type-aliases-package: com.ldu.reservationOrder
   configuration:
     map-underscore-to-camel-case: true
 
